# MindTrace

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN_3_POINTS.md  LICENSE  README.md  SETUP_VSCODE.md  formatar_mindtrace.py  main.py  setup_onnx.ps1  styles.py
.claude/: settings.json  settings.local.json
MindTrace_Data/Reconhecimento_Objetos/Animal_Treino_20260331_180906/: experiment_data.csv  metadata.csv
OuroScan_Data/Reconhecimento_Objetos/1_Habituacao_20260331_165204/: metadata.csv
animal-lifecycle-platform/: README.md
animal-lifecycle-platform/backend/: .env  requirements.txt
animal-lifecycle-platform/backend/app/: __init__.py  bootstrap.py  config.py  db.py  id_model.py  main.py  models.py  schemas.py  security_auth.py  security_network.py  security_sync.py  seed.py
animal-lifecycle-platform/backend/app/routers/: animals.py  auth.py  experiments.py  lookups.py  sync.py
animal-lifecycle-platform/backend/app/services/: animal_service.py  mindtrace_import_service.py
animal-lifecycle-platform/backend/scripts/: backup_db.py  create_user.py
animal-lifecycle-platform/backend/tests/: test_auth_security.py  test_id_model.py  test_sync_security.py
animal-lifecycle-platform/mobile/: .env.example  app.json  package-lock.json  package.json  tsconfig.json
animal-lifecycle-platform/mobile/src/: App.tsx  types.ts
animal-lifecycle-platform/mobile/src/api/: client.ts
animal-lifecycle-platform/mobile/src/screens/: AnimalTimelineScreen.tsx  AnimalsListScreen.tsx  LoginScreen.tsx  NewAnimalScreen.tsx  SettingsScreen.tsx  UsersAdminScreen.tsx
animal-lifecycle-platform/mobile/src/utils/: dateFormat.ts  i18n.ts
animal-lifecycle-platform/ops/: register_backup_task.ps1  run_backup.ps1
components/: buttons.py  cards.py  experiment_table.py
data/: manager.py
docs/: GLOSSÁRIO.md  QUICK_START.md
qt/: ArenaModel.cpp  CMakeLists.txt  ExperimentManager.cpp  ExperimentTableModel.h  build.bat  dlc_processor.spec  formatar_mindtrace.py  inference_processor.py  main.cpp  pose_cfg.yaml  resources.qrc  resources_rc.py
qt/data/: arena_config_ei_referencia.json  arena_config_referencia.json  arenas.json
qt/qml/: ArenaSelection.qml  ArenaSetup.qml  CampoSelector.qml  GhostButton.qml  HomeScreen.qml  LandingCard.qml  LandingScreen.qml  LiveRecording.qml  MainDashboard.qml  NORCard.qml  NORSetupScreen.qml  SelectionCard.qml  SessionResultDialog.qml  Toast.qml  main.qml
qt/qml/ca/: CAArenaSelection.qml  CADashboard.qml  CAMetadataDialog.qml  CASetup.qml  qmldir
qt/qml/cc/: CCArenaSelection.qml  CCDashboard.qml  CCMetadataDialog.qml  CCSetup.qml  qmldir
qt/qml/core/: GhostButton.qml  HomeScreen.qml  LandingCard.qml  LandingScreen.qml  PrimaryButton.qml  SearchBrowser.qml  SelectionCard.qml  Toast.qml  dayNameUtils.js  main.qml  qmldir
qt/qml/core/Theme/: ColorPalette.qml  LanguageManager.qml  SettingsScreen.qml  ThemeManager.qml  qmldir
qt/qml/ei/: EIArenaSetup.qml  EIDashboard.qml  EIMetadataDialog.qml  EISetup.qml  qmldir
qt/qml/nor/: ArenaSelection.qml  ArenaSetup.qml  CampoSelector.qml  NORCard.qml  NORDashboard.qml  NORSetupScreen.qml  qmldir
qt/qml/shared/: AnimalSearchField.qml  BoutEditorPanel.qml  CADataView.qml  CCDataView.qml  DataView.qml  EIDataView.qml  GenericDataView.qml  LiveRecording.qml  NORDataView.qml  SessionResultDialog.qml  qmldir
qt/scripts/: build.bat  build_dlc_exe.bat  build_installer.bat  installer.iss  run.bat  setup_onnx.ps1  setup_python38.ps1
qt/src/: ExperimentManager.cpp  ExperimentManager.h  ExperimentTableModel.cpp  dlc_controller.cpp  dlc_controller.h  main.cpp  onnx_tracker.cpp  onnx_tracker.h
qt/src/analysis/: BSoidAnalyzer.cpp  BSoidAnalyzer.h
qt/src/core/: main.cpp
qt/src/manager/: ExperimentManager.cpp  ExperimentManager.h
qt/src/models/: ArenaConfigModel.cpp  ArenaConfigModel.h  ArenaModel.cpp  ArenaModel.h  ExperimentTableModel.cpp  ExperimentTableModel.h
qt/src/settings/: LanguageSettings.cpp  LanguageSettings.h  ThemeSettings.cpp  ThemeSettings.h
qt/src/tracking/: BehaviorScanner.cpp  BehaviorScanner.h  BehaviorTimeline.cpp  BehaviorTimeline.h  dshow_capture.cpp  dshow_capture.h  inference_controller.cpp  inference_controller.h  inference_engine.cpp  inference_engine.h  onnx_tracker.cpp  onnx_tracker.h  video_input_enumerator.cpp  video_input_enumerator.h
screens/: eletrof_screen.py  esquiva_screen.py  home_screen.py  nor_objective_screen.py  nor_screen.py  openfield_screen.py
